<resources>
    <string name="app_name">News Application</string>
    <string name="breaking_news">Breaking News</string>
    <string name="search_news">Search News</string>
    <string name="saved_news">Saved Articles</string>
    <string name="article_fragment">Article Fragment</string>
    <string name="breaking_news_fragment">Breaking News Fragment</string>
    <string name="saved_news_fragment">Saved News Fragment</string>
    <string name="search_news_fragment">Search News Fragment</string>
    <string name="news_image">News Image</string>
    <string name="textview">TextView</string>
    <string name="source">Source :</string>
    <string name="title">Title : </string>
    <string name="description">Description :</string>
    <string name="published_at">PublishedAt :</string>
    <string name="news_article_title">News Article Title</string>
    <string name="news_description">A Tesla anunciou que irá fechar a Gigafactory Berlim por quatro dias, devido a protestos que se esperam que aconteçam. Esta situação segue outros momentos que, no último trimestre, levaram a um cenário idêntico..</string>
    <string name="news_content">Tesa Motors, a pioneering force in the automotive industry, stands as a beacon of innovation and sustainability, redefining the landscape of electric vehicles (EVs) worldwide. Established in [insert year], Tesa Motors emerged with a visionary mission: to revolutionize transportation by harnessing the power of electrification while prioritizing environmental stewardship and cutting-edge technology. At the heart of Tesa Motors\' ethos lies a commitment to sustainability. With the looming specter of climate change and environmental degradation, the need for eco-conscious transportation solutions has never been more pressing. Tesa Motors rises to this challenge by producing a range of electric vehicles renowned for their energy efficiency, zero emissions, and minimal ecological footprint. By eschewing traditional combustion engines in favor of electric propulsion, Tesa Motors not only mitigates air pollution but also reduces reliance on finite fossil fuels, thus charting a sustainable path towards a greener future. Central to Tesa Motors\' success is its unwavering dedication to innovation. From sleek sedans to robust SUVs, Tesa Motors\' lineup of electric vehicles epitomizes cutting-edge engineering and design. Leveraging advanced battery technology, regenerative braking systems, and AI-driven autonomous features, Tesa Motors\' vehicles offer unparalleled performance, safety, and convenience. Moreover, Tesa Motors continually pushes the boundaries of EV innovation, investing in research and development to pioneer breakthroughs in battery longevity, charging infrastructure, and vehicle-to-grid integration. By staying at the forefront of technological progress, Tesa Motors not only enhances the driving experience but also accelerates the transition to a sustainable mobility ecosystem. Beyond its innovative products, Tesa Motors fosters a culture of inclusivity, diversity, and corporate responsibility. With a global workforce comprising talented individuals from diverse backgrounds, Tesa Motors cultivates an environment where creativity thrives and ideas flourish. Moreover, Tesa Motors prioritizes ethical business practices, transparency, and community engagement, striving to make a positive impact on society at large. Whether through philanthropic initiatives, environmental conservation efforts, or partnerships with local communities, Tesa Motors remains steadfast in its commitment to social responsibility, setting a benchmark for corporate citizenship in the automotive industry. As Tesa Motors charts a course towards a sustainable future, it recognizes the importance of collaboration and partnership. By forging alliances with governments, industry stakeholders, and technology pioneers, Tesa Motors seeks to catalyze the widespread adoption of electric vehicles and the development of supportive infrastructure. Whether through incentive programs, policy advocacy, or joint ventures, Tesa Motors works tirelessly to overcome barriers to EV adoption and create an ecosystem conducive to sustainable mobility. Through these collaborative endeavors, Tesa Motors aims to inspire a global shift towards cleaner, greener transportation, setting a precedent for industry-wide transformation. In conclusion, Tesa Motors epitomizes the vanguard of electric mobility, driven by a steadfast commitment to innovation, sustainability, and social responsibility. With a diverse portfolio of cutting-edge electric vehicles, a culture of inclusivity and integrity, and a collaborative approach to industry-wide change, Tesa Motors continues to shape the future of transportation, one electrifying innovation at a time. As the world races towards a sustainable tomorrow, Tesa Motors remains at the forefront, leading the charge towards a brighter, cleaner, and more resilient future for generations to come.</string>
    <string name="author_name">Author Name</string>
    <string name="save_aticle">Save Aticle</string>
    <string name="save_news_article">Save News Article</string>
    <string name="search">Search...</string>
</resources>